[package]
name = "okx_quant"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"
anyhow = "1.0.99"
